--- a/ChattingUIPractice/Base.lproj/Main.storyboard
+++ b/ChattingUIPractice/Base.lproj/Main.storyboard
@@ -60,16 +60,53 @@
             </objects>
             <point key="canvasLocation" x="1063.3587786259541" y="3.5211267605633805"/>
         </scene>
-        <!--View Controller-->
+        <!--Chatting View Controller-->
         <scene sceneID="860-AI-yv4">
             <objects>
-                <viewController id="xkd-RF-5Dv" sceneMemberID="viewController">
+                <viewController id="xkd-RF-5Dv" customClass="ChattingViewController" customModule="ChattingUIPractice" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tRS-wI-HqS">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="v6F-qm-OQY">
+                                <rect key="frame" x="0.0" y="59" width="393" height="1"/>
+                                <color key="backgroundColor" systemColor="separatorColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="B55-4u-pYL"/>
+                                </constraints>
+                            </view>
+                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="S7O-fR-fFm">
+                                <rect key="frame" x="16" y="758" width="361" height="44"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="Tbj-pN-hVc"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="TsU-8S-0M6">
+                                <rect key="frame" x="0.0" y="60" width="393" height="698"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            </tableView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="6F8-ZR-de5"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="S7O-fR-fFm" firstAttribute="top" secondItem="TsU-8S-0M6" secondAttribute="bottom" id="1UH-rJ-Gzi"/>
+                            <constraint firstItem="v6F-qm-OQY" firstAttribute="leading" secondItem="6F8-ZR-de5" secondAttribute="leading" id="AA1-SR-1WJ"/>
+                            <constraint firstItem="v6F-qm-OQY" firstAttribute="top" secondItem="6F8-ZR-de5" secondAttribute="top" id="GaV-3i-Td1"/>
+                            <constraint firstItem="TsU-8S-0M6" firstAttribute="leading" secondItem="6F8-ZR-de5" secondAttribute="leading" id="O4H-SM-hkR"/>
+                            <constraint firstItem="6F8-ZR-de5" firstAttribute="trailing" secondItem="S7O-fR-fFm" secondAttribute="trailing" constant="16" id="Qzt-8e-4fb"/>
+                            <constraint firstItem="S7O-fR-fFm" firstAttribute="leading" secondItem="6F8-ZR-de5" secondAttribute="leading" constant="16" id="U1e-2y-GDl"/>
+                            <constraint firstItem="6F8-ZR-de5" firstAttribute="trailing" secondItem="v6F-qm-OQY" secondAttribute="trailing" id="bSX-Jc-vgx"/>
+                            <constraint firstItem="TsU-8S-0M6" firstAttribute="top" secondItem="v6F-qm-OQY" secondAttribute="bottom" id="mhq-ED-70I"/>
+                            <constraint firstItem="6F8-ZR-de5" firstAttribute="bottom" secondItem="S7O-fR-fFm" secondAttribute="bottom" constant="16" id="nIq-rs-ijh"/>
+                            <constraint firstItem="6F8-ZR-de5" firstAttribute="trailing" secondItem="TsU-8S-0M6" secondAttribute="trailing" id="t4h-43-3Vj"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="tableView" destination="TsU-8S-0M6" id="dIA-8H-xHX"/>
+                        <outlet property="textField" destination="S7O-fR-fFm" id="zEd-pN-CQ4"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3t7-PN-0Hs" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
