--- a/ChattingUIPractice/Component/DateSeparator/MyDateSeparatorTableViewCell.xib
+++ b/ChattingUIPractice/Component/DateSeparator/MyDateSeparatorTableViewCell.xib
@@ -18,31 +18,31 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="by0-E8-yVb">
-                        <rect key="frame" x="168" y="16" width="37.333333333333343" height="18"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                        <rect key="frame" x="171" y="16" width="31" height="14.333333333333336"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="E1g-TC-hSU">
-                        <rect key="frame" x="221.33333333333337" y="24" width="151.66666666666663" height="2"/>
+                        <rect key="frame" x="218" y="22.333333333333332" width="155" height="2"/>
                         <color key="backgroundColor" systemColor="separatorColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="Zrv-3Y-45s"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="453-7q-h2a">
-                        <rect key="frame" x="0.0" y="24" width="152" height="2"/>
+                        <rect key="frame" x="0.0" y="22.333333333333332" width="155" height="2"/>
                         <color key="backgroundColor" systemColor="separatorColor"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="2" id="eBP-0x-9EP"/>
                         </constraints>
                     </view>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ryr-PF-Hx5">
-                        <rect key="frame" x="97" y="50" width="260" height="156"/>
+                        <rect key="frame" x="97" y="46.333333333333329" width="260" height="159.66666666666669"/>
                         <color key="backgroundColor" systemColor="quaternaryLabelColor"/>
                     </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="오늘 주말이에요.... 살려주세요... 덴님.... 주말이 평일보다 힘들어요.." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Zho-5d-E3u">
-                        <rect key="frame" x="105" y="58" width="244" height="140"/>
+                        <rect key="frame" x="105" y="54.333333333333329" width="244" height="143.66666666666669"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
